fix(components): align the toggle switch text with the knob

--- a/src/renderer/src/components/toggle-switch/ToggleSwitch.module.scss
+++ b/src/renderer/src/components/toggle-switch/ToggleSwitch.module.scss
@@ -16,6 +16,9 @@
    font-weight: 700;
    text-align: right;
 
+   // Fix empty space above font chars
+   margin-top: -3px;
+
    pointer-events: none;
 }
 
